<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#272343"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/QuestionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/question_number"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textColor="#ffa384"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/selectoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/selectedoption"
            android:visibility="gone"
            android:textAlignment="center"
            android:textColor="#272343" />


        <TextView
            android:id="@+id/CorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/correctanswer"
            android:visibility="gone"
            android:textAlignment="center"
            android:textColor="#272343" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FirstTwoOptions"
        android:layout_gravity="center"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/optionA"
        android:text="@string/question1_A"
        android:background="@drawable/optiondesign"
        android:textColor="#272343"
        android:textAlignment="center"
        android:paddingTop="14dp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/optionB"
        android:text="@string/question1_B"
        android:background="@drawable/optiondesign"
        android:layout_marginTop="10dp"
        android:textColor="#272343"
        android:textAlignment="center"
        android:paddingTop="14dp"
        android:gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RemainingTwoOptions"
        android:layout_gravity="center"
        android:paddingRight="50dp"
        android:layout_marginBottom="30dp"
        android:paddingLeft="50dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionC"
            android:text="@string/question1_C"
            android:background="@drawable/optiondesign"
            android:layout_marginTop="10dp"
            android:textColor="#272343"
            android:textAlignment="center"
            android:paddingTop="14dp"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/optionD"
            android:layout_marginTop="10dp"
            android:text="@string/question1_D"
            android:background="@drawable/optiondesign"
            android:textColor="#272343"
            android:textAlignment="center"
            android:paddingTop="14dp"
            android:gravity="center_horizontal" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/score"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/score"
            android:layout_gravity="end"
            android:padding="20dp" />

        <ProgressBar
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#fff383"
            android:layout_gravity="bottom"
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:indeterminate="false"/>

    </LinearLayout>


</LinearLayout>







